# regagro-tat-api

./: .env  Cargo.toml  Dockerfile  configuration.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20231103110933_creation_regagro_3_0.sql
scripts/: init_db.sh  init_mysql_db.sh
src/: configuration.rs  helpers.rs  lib.rs  main.rs  startup.rs  structs.rs
src/data/: animals.json  districts.json  regions.json
src/routes/: get_animal_by_period copy.rs  get_animal_by_period.rs  get_animal_count_by_district copy.rs  get_animal_count_by_district.rs  get_animal_count_by_kind.rs  get_animal_count_by_kind_for_period.rs  get_apiary_count_by_district.rs  get_disposal_count_by_district.rs  get_disposal_count_by_reason.rs  get_enterprise_count_by_district.rs  get_enterprise_count_by_type.rs  get_livestock_age_group_count_by_districts.rs  get_livestock_age_group_count_by_pos_councils.rs  get_livestock_count_by_companies.rs  get_livestock_count_by_districts.rs  get_livestock_count_by_pos_councils.rs  get_researches_by_diseases.rs  get_researches_by_districts.rs  get_researches_by_kinds.rs  get_researches_by_pos_councils.rs  get_vaccinations_by_diseases.rs  get_vaccinations_by_districts.rs  get_vaccinations_by_kinds.rs  get_vaccinations_by_pos_councils.rs  health_check.rs  kinds.rs  mod.rs  regions.rs  subscriptions.rs
tests/: health_check.rs
