#! Cargo.toml
[package]
authors = ["ārXāngēl <lavrenyk@gmail.com>"]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dev-dependencies]
once_cell = "1.18.0"

[dependencies]
actix-web = "4.4.0"
chrono = {version = "0.4.30", default-features = false, features = ["clock"]}
config = "0.13.3"
json = "0.12.4"
log = "0.4.20"
reqwest = "0.11.20"
serde = {version = "1.0.88", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.32.0", features = ["macros", "rt-multi-thread"]}
tracing = {version = "0.1.37", features = ["log"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = {version = "0.3.17", features = ["registry", "env-filter"]}
uuid = {version = "1.4.1", features = ["v4"]}

[dependencies.sqlx]
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "mysql",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.7"
